src/test/compile-fail/spawn-non-nil-fn.rs
// error-pattern: mismatched types

extern mod std;

fn main() { task::spawn(fn~() -> int { 10 }); }
